result file name in config file

--- a/PeerSimBased/config/POWER_OF_CHOICE_MTBF7DAYS_nodes200.filesize10000.10000files.3replicas.selection99.cfg
+++ b/PeerSimBased/config/POWER_OF_CHOICE_MTBF7DAYS_nodes200.filesize10000.10000files.3replicas.selection99.cfg
@@ -110,7 +110,7 @@ control.3.bw 3bandwidth
 control.3.files 10000
 control.3.step OBSERVER_STEP
 control.3.churnprot 1churngen
-control.3.gnuplotfile result/PowerOfChoice/GLOBAL_LEAFSET_MTBF7DAYS_1TYPENODE_nodes200.filesize10000.10000files.3replicas.selection99/1.churnPast.txt
+control.3.gnuplotfile results/POWER_OF_CHOICE_MTBF7DAYS_nodes200.filesize10000.10000files.3replicas.selection99.log
 #control.3.stopAtFirstLost true
 #control.3.loadsfile result/PowerOfChoice/GLOBAL_LEAFSET_MTBF7DAYS_1TYPENODE_nodes200.filesize10000.10000files.3replicas.selection99/1.loads.txt
 #control.3.queuesfile result/PowerOfChoice/GLOBAL_LEAFSET_MTBF7DAYS_1TYPENODE_nodes200.filesize10000.10000files.3replicas.selection99/1.queues.txt
