cfg / result example forthe peersim-based simulator

--- a/PeerSimBased/config/POWER_OF_CHOICE_MTBF7DAYS_nodes200.filesize10000.10000files.3replicas.selection99.cfg
+++ b/PeerSimBased/config/POWER_OF_CHOICE_MTBF7DAYS_nodes200.filesize10000.10000files.3replicas.selection99.cfg
@@ -41,7 +41,7 @@ PASTA 3
 random.seed 30063
 
 simulation.experiments 1
-simulation.endtime 2*YEAR
+simulation.endtime 2*MONTH
 
 network.size SIZE
 network.node peersim.pastPastry.TypedNode
