WIP on the configuration engine

--- a/SpladSimJava/splad.properties
+++ b/SpladSimJava/splad.properties
@@ -1,5 +1,43 @@
 # This is a SpladSimJava configuration file (passed to the SG controler 
 # process)
 
+############################################
+# Splad parameters 
+# #seconds between two maintenances
+# 10 minutes
+maintenancePeriod=600 
+
+# #of nodes in the selection range
+selectionRange=99
+
+# How nodes are chosen within the selection range
+# 0 (default): random, 1: less charged, 2: Power of 2 choices
+placementPolicie=2
+
+############################################
+# Application
+# size of the files (the same for all files)
+fileSize=10000
+
+# number of files
+nbFiles=10000
+
+# replication factor
+rf=3
+
+# maximal simulation time (may stop before if nothing to do)
+# 2 years
+endTime=63072000
+
+############################################
+#Simulation specific
 # the random seed
 seed=42
+
+# #seconds between two global observations
+# every day
+observationPeriod=86400
+
+# result files
+# the one similar to the peersim simulator
+gnuplotFile=splad_results.dat
