Done with the configuration engine

--- a/SpladSimJava/splad.properties
+++ b/SpladSimJava/splad.properties
@@ -23,7 +23,7 @@ fileSize=10000
 nbFiles=10000
 
 # replication factor
-rf=3
+replFactor=3
 
 # maximal simulation time (may stop before if nothing to do)
 # 2 years
