initial storing of data blocks works with the random policy :-))

--- a/SpladSimJava/splad.properties
+++ b/SpladSimJava/splad.properties
@@ -8,11 +8,11 @@
 maintenancePeriod=600 
 
 # #of nodes in the selection range
-selectionRange=99
+selectionRange=9
 
 # How nodes are chosen within the selection range
-# 0 (default): random, 1: less charged, 2: Power of 2 choices
-placementPolicie=2
+# 0: random, 1: less charged, 2: Power of 2 choices
+placementPolicie=0
 
 ############################################
 # Application
@@ -20,7 +20,7 @@ placementPolicie=2
 fileSize=10000
 
 # number of files
-nbFiles=10000
+nbFiles=100000
 
 # replication factor
 replFactor=3
