failure injection ok (+ data loss observed by the observer)

--- a/SpladSimJava/splad.properties
+++ b/SpladSimJava/splad.properties
@@ -15,7 +15,7 @@ selectionRange=9
 placementPolicie=2
 
 ############################################
-# Application
+# Application / environment
 # size of the files (the same for all files)
 fileSize=10000
 
@@ -24,6 +24,9 @@ nbFiles=100000
 
 # replication factor
 replFactor=3
+
+# mtbf (per node, in seconds)
+mtbf=604800
 
 # maximal simulation time (may stop before if nothing to do)
 # 2 years
